add description about nonverbal communication

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <span class="caption">
                 <span class="caption-content">
                   <h2>非言語コミュニケーション</h2>
-                  <p class="mb-0">TBW</p>
+                  <p class="mb-0">人は言葉を話せないロボットと会話できるのでしょうか？私たちは「人の未来を予測する力」と「ノンバーバル情報」にその成功の鍵があると考え、研究を進めています。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -205,13 +205,57 @@
       </div>
     </section>
 
-    <!-- Hardware Design -->
+    <!-- Nonverbal Communication -->
     <section class="content-section bg-light" id="nonverbal-communication">
-      <div class="container text-center">
+      <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>非言語コミュニケーション</h2>
-            <p class="lead mb-5">TBW</p>
+            <p class="lead mb-3">
+              家に帰ると飼い犬が尻尾を振って私のもとへやってくる。その仕草は私の帰りを心待ちにしていたかのようで、私は彼を抱き上げ「ただいま」と声をかける。
+            </p>
+            <p class="lead mb-3">
+              私たちは相手が言葉を扱えなくてもコミュニケーションを取ることができ、時に言葉で話しかけます。
+              こうした言葉に依らないコミュニケーションを支える重要な要素として、
+              私たちは「人の未来を予測する力」と「ノンバーバル情報」に着目し、研究を進めています。
+            </p>
+            <p class="lead mb-3">
+              「人の未来を予測する力」とは、状況に基づいてこれから受け取る情報を予期する力です。
+              例えば、帰宅した時には「おかえり」と声をかけられることを私たちは知っています。
+              冒頭のペットとの会話では、そうした事前知識に基づく予測によってペットの振る舞いを「おかえり」と解釈していると考えられます。
+            </p>
+            <p class="lead mb-3">
+              「ノンバーバル情報」とは、言葉を使わずに伝達できる情報であり、身振りや声色などが当てはまります。
+              例えば、「何で遊びたい？」とペットに尋ね、ペットがボールのもとへ走っていけば、言葉のやりとりなしに意図を理解できます。
+            </p>
+            <p class="lead mb-3">
+              非言語コミュニケーションを実現する第一歩として、「しりとり」を題材に実験を行いました。
+              しりとりには、「りんご」の次は「ゴリラ」といったお決まりのパターンが複数存在し、一般の会話と比べ、相手の応答を予測しやすい性質があります。
+              「人の未来を予測する力」に頼ったコミュニケーションを行う上で、これは都合の良い性質です。
+            </p>
+            <p class="lead mb-3">
+              はじめに、ロボットの声だけを使った実験を行いました。
+              実験協力者はロボットに言葉で話しかけ、ロボットはミニドラやピカチュウのように限られた音を駆使して返事をします。
+              実験の結果、ロボットは言葉を正しく発音できないにも関わらず、半分以上の実験協力者が上手くしりとりを行えたと感じていたことが分かりました。
+              今後、より詳細に検討する必要はありますが、
+              「人の未来を予測する力」を活用すれば言葉を話せないロボットと言葉で会話できる可能性があることが分かりました。
+            </p>
+            <p class="lead mb-3">
+              実験のやりとりを分析したところ、二つのことに気が付きました。
+              一つ目は、しりとりが成立したと感じた実験協力者は、
+              しりとりの返事と「はい」や「いいえ」などの相槌を正しく区別できる傾向にあり、ターンテイキングが円滑であったことです。
+              二つ目は、そうした実験協力者でさえ、しりとりの返事を必ずしも正しく理解できていなかったことです。
+            </p>
+            <p class="lead mb-3">
+              これらの気付きから、現在はノンバーバル情報の活用方法について研究しています。
+              例えば、相槌の発話に首を振る動作が伴えば、それが相槌であることを簡単に理解でき、円滑なターンテイキングの実現に近付けると考えられます。
+              また、何かを指差しながら発話すれば、その先にあるモノに関する内容を伝えようとしていることが分かり、誤った解釈を減らせる可能性があります。
+            </p>
+            <p class="lead mb-3">
+              これまでに実際に検討してきたノンバーバル情報の一つは「会話の間」です。
+              この研究では、「人の未来を予測する力」を引き出す、また引き出せたか確認する手段としての「会話の間」の有効性について調査し、
+              HAIシンポジウム2017にて学生奨励賞を受賞しました。
+            </p>
           </div>
         </div>
       </div>
