add description written by Nishida

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
         <h1 class="mb-1">ミニドラプロジェクト</h1>
-        <h3 class="mb-5">TBW</h3>
+        <h3 class="mb-5">WBA Future Leaders Research</h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">もっと見る</a>
       </div>
       <div class="overlay"></div>
@@ -64,16 +64,27 @@
 
     <!-- About -->
     <section class="content-section bg-light" id="about">
-      <div class="container text-center">
+      <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>ミニドラとは？</h2>
-            <p class="lead mb-5">TBW</p>
+            <h2>あらまし</h2>
+            <p class="lead mb-3">
+              私の前に小さなロボットがいる。
+              人の言葉を話せなければ、私の助けなしに段差を登り降りすることもできない。
+              持ち上げて移動させていると、人懐っこい声をあげ、小さな腕と頭を使って私に「降ろして！」と訴えてくる。
+              降ろしてあげると、私に何か言い残し、お気に入りのオモチャがあるところへ一目散に向かっていく。
+              今のは「ありがとう！」なのか「やったー！」なのか、何だったんだろうと考えながら、私はロボットの後を追いかける。
+            </p>
+            <p class="lead mb-3">
+              私たち全脳アーキテクチャ若手の会は、アニメ「ドラえもん」ののび太とドラえもんの関係のように、人と支え合えるロボットの実現を目指しています。
+              支え合えるほど親密な関係を築くには、お互いを理解し合うことが重要です。
+              人同士でそうした関係を築く上で重要なことは、行動や感情を理解することですが、
+              同じことをロボットで実現するにはどうすれば良いのでしょうか。
+              私たちは「ミニドラプロジェクト」によってこれに取り組んでいます。
+            </p>
             <div class="embed-responsive embed-responsive-16by9">
               <iframe src="https://www.youtube.com/embed/jepfyhL2t-w" allowfullscreen></iframe>
             </div>
-            <p class="mb-5"><!-- Just for padding --></p>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">ミニドラの仕組み</a>
           </div>
         </div>
       </div>
@@ -136,9 +147,27 @@
     <!-- Projects -->
     <section class="content-section my-auto" id="portfolio">
       <div class="container">
-        <div class="content-section-heading text-center">
+        <div class="content-section-heading">
           <h3 class="text-secondary mb-0">これまでの取り組み</h3>
           <h2 class="mb-5">研究プロジェクト</h2>
+          <p class="lead mb-3">
+            「ミニドラ」には私たち人間のように「ミニドラ」の感じる世界があります。
+            大好きなどら焼きがあれば直ぐに駆け寄りたいし、嫌いなネズミがいれば直ぐさま逃げ出したいと思うでしょう。
+            成長して、もっともっと色んな行動を取り出すかも知れません。
+            だけど、「ミニドラ」は人の住む世界で好きに動くには体が小さすぎます。
+            段差があってどら焼きにたどり着けない事もあるでしょう。
+            段差を登り降りするには人間の助けが必要です。
+            「ミニドラ」は人間に助けて欲しいことを伝えないといけません。
+            もちろん人間の言葉は話せません、でも自由に動く頭や腕、足そして声は出すことができます。
+          </p>
+          <p class="lead mb-3">
+            この「ミニドラ」はどうすれば人間とコミュニケーションを取って助けてもらえるのでしょうか。
+            まず、「ミニドラ」は人間に何をして欲しいか、体を使って意図を伝える方法を考えないといけません。
+            そして、人間は「ミニドラ」が何をして欲しいのか汲み取ってあげないといけません。
+            私たちはこの「ミニドラプロジェクト」によって、
+            人間の手助けをしてもらうことを前提に設計されたロボットに対して人間がどのようにコミュニケーションを取れば良いのか、
+            「ミニドラ」の行動の立場と人間の認識の両方の視点から研究しています。
+          </p>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
@@ -299,8 +328,17 @@
     <!-- Callout -->
     <section class="callout text-white" id="callout">
       <div class="container text-center">
-        <p class="lead mb-5">ミニドラプロジェクトは日本全国のメンバーが参加しています。</p>
-        <a class="btn btn-primary btn-xl" href="">プロジェクトに参加する</a>
+        <p class="lead mb-5">
+          私たちは本プロジェクトに協力してくださる方を広く募集しています。
+        </p>
+        <p class="lead mb-5">
+          本プロジェクトには全脳アーキテクチャ若手の会に関わる多彩な専門を持った研究者から、<br>
+          プロジェクトの趣旨に共感する一般の方まで多くのメンバーが共同して取り組んでいます。
+        </p>
+        <p class="lead mb-5">
+          プロジェクトへの参加およびご質問、ご意見、ご指摘、アイディアは下記のフォームよりお知らせください。
+        </p>
+        <a class="btn btn-primary btn-xl" href="">コンタクトページに移動する</a>
       </div>
     </section>
 
