--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
       </div>
       <div class="container text-center">
-        <h3 class="mb-5"></h3>
+        <h3 class="mb-5"><!-- Just for padding --></h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#publication">研究発表など</a>
       </div>
     </section>
@@ -309,16 +309,28 @@
           <div class="col-lg-10 mx-auto">
             <h2>研究発表</h2>
             <ul>
-              <li>汎用人工知能研究のマイルストーンとしての擬人化キャラクター [大澤+ 2017]</li>
+              <li>奥岡耕平，大澤正彦，今井倫太, "コンテクスト推定に基づいて予測的認知を誘発する非自然言語エージェント", 情報処理学会第80回全国大会, 2018. (口頭)</li>
+              <li>大藤 聖菜, 妹尾 卓磨, 清丸 寛一, 川崎 邦将, 大澤 正彦, 長田 茂美, 今井 倫太, "予測的認知と「間」の関係―言葉を話せないロボットによるしりとりを題材とした考察―", HAIシンポジウム, 2017. (口頭)</li>
+              <li>大澤正彦, 川崎邦将, 八木拓真, 長田茂美, 今井倫太, "汎用人工知能研究のマイルストーンとしての擬人化キャラクター", 人工知能学会 第6回 汎用人工知能研究会, 2017. (口頭)</li>
+              <li>川崎邦将, 大澤正彦, 今井倫太, 長田茂美, "認知的制約付き擬人化キャラクターに着目したコミュニケーションロボットの設計と開発", 人工知能学会 第6回 汎用人工知能研究会, 2017. (口頭)</li>
+              <li>清丸寛一, 大澤正彦, 今井倫太, "予測的認知を用いた非自然言語による言語的コミュニケーション", 人工知能学会 第6回 汎用人工知能研究会, 2017. (口頭)</li>
             </ul>
             <h2>取材</h2>
             <ul>
-              <li>TBW</li>
+              <li>"【妄想してみた】かわいいロボットとの生活で実現したら嬉しい13のこと", AINOW, 2018.</li>
+              <li>"リアル・ドラえもんを作りたい！", TBSラジオ THE FROGMAN SHOW A.I.共存ラジオ 好奇心家族, 2018.</li>
+              <li>"リアル「ドラえもん」をつくるんだ", 朝日中高生新聞, 2018.</li>
+              <li>"「異能」そろって刺激し合う 孫正義育英財団1期生、成果をプレゼン - ドラえもんづくりへ仲間集め", 朝日小学生新聞 (1面), 2018.</li>
+              <li>"ロボットに自然な動作 慶大 アーキテクチャー開発", 日刊工業新聞, 2017.</li>
+              <li>"ドラえもんを作る!!!!!"​, AINOW,  2017.</li>
+              <li>"小学生からブレない想い。全脳アーキテクチャ若手の会創設者の思想と目指すもの", AIJobColle, 2017.</li>
+              <li>"制約があるからこそ、実現できる人間と「ミニドラ」の会話をHumanAgent Interaction (HAI)から学ぶ", AINOW, 2018.</li>
+              <li>"ドラえもんの心を作るには"​, 日本経済新聞 朝刊, 2017.</li>
             </ul>
             <h2>受賞</h2>
             <ul>
-              <li>KTM Microsoft Imagine Cup AWARD</li>
-              <li>HAIシンポジウム 学生奨励賞</li>
+              <li>2017年 KTM Microsoft Imagine Cup AWARD</li>
+              <li>2017年 HAIシンポジウム 学生奨励賞</li>
             </ul>
           </div>
         </div>
