--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ミニドラプロジェクト</title>
+    <title></title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -65,33 +65,36 @@
     <!-- About -->
     <section class="content-section bg-light" id="about">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-10 mx-auto">
-            <h2>あらまし</h2>
-            <p class="lead mb-3">
-              私の前に小さなロボットがいる。
-              人の言葉を話せなければ、私の助けなしに段差を登り降りすることもできない。
-              持ち上げて移動させていると、人懐っこい声をあげ、小さな腕と頭を使って私に「降ろして！」と訴えてくる。
-              降ろしてあげると、私に何か言い残し、お気に入りのオモチャがあるところへ一目散に向かっていく。
-              今のは「ありがとう！」なのか「やったー！」なのか、何だったんだろうと考えながら、私はロボットの後を追いかける。
-            </p>
-            <p class="lead mb-3">
-              私たち全脳アーキテクチャ若手の会は、アニメ「ドラえもん」ののび太とドラえもんの関係のように、人と支え合えるロボットの実現を目指しています。
-              支え合えるほど親密な関係を築くには、お互いを理解し合うことが重要です。
-              人同士でそうした関係を築く上で重要なことは、行動や感情を理解することですが、
-              同じことをロボットで実現するにはどうすれば良いのでしょうか。
-              私たちは「ミニドラプロジェクト」によってこれに取り組んでいます。
-            </p>
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://www.youtube.com/embed/jepfyhL2t-w" allowfullscreen></iframe>
-            </div>
+        <div class="content-section-heading">
+          <h2 class="mb-5">あらまし</h2>
+          <p class="lead mb-3">
+            私の前に小さなロボットがいる。
+            人の言葉を話せなければ、私の助けなしに段差を登り降りすることもできない。
+            持ち上げて移動させていると、人懐っこい声をあげ、小さな腕と頭を使って私に「降ろして！」と訴えてくる。
+            降ろしてあげると、私に何か言い残し、お気に入りのオモチャがあるところへ一目散に向かっていく。
+            今のは「ありがとう！」なのか「やったー！」なのか、何だったんだろうと考えながら、私はロボットの後を追いかける。
+          </p>
+          <p class="lead mb-3">
+            私たち全脳アーキテクチャ若手の会は、アニメ「ドラえもん」ののび太とドラえもんの関係のように、人と支え合えるロボットの実現を目指しています。
+            支え合えるほど親密な関係を築くには、お互いを理解し合うことが重要です。
+            人同士でそうした関係を築く上で重要なことは、行動や感情を理解することですが、
+            同じことをロボットで実現するにはどうすれば良いのでしょうか。
+            私たちは「ミニドラプロジェクト」によってこれに取り組んでいます。
+          </p>
+          <p class="lead mb-5"><!-- Just for padding --></p>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.youtube.com/embed/jepfyhL2t-w" allowfullscreen></iframe>
           </div>
         </div>
+      </div>
+      <div class="container text-center">
+        <h3 class="mb-5"><!-- Just for padding --></h3>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#hardware">ハードウェアの仕組み</a>
       </div>
     </section>
 
     <!-- Hardware -->
-    <section class="content-section bg-primary text-white text-center" id="services">
+    <section class="content-section bg-primary text-white text-center" id="hardware">
       <div class="container">
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0">ミニドラの仕組み</h3>
@@ -168,6 +171,7 @@
             人間の手助けをしてもらうことを前提に設計されたロボットに対して人間がどのようにコミュニケーションを取れば良いのか、
             「ミニドラ」の行動の立場と人間の認識の両方の視点から研究しています。
           </p>
+          <p class="lead mb-5"><!-- Just for padding --></p>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
@@ -224,10 +228,10 @@
 
     <!-- Hardware Design -->
     <section class="content-section bg-primary text-white" id="harware-design">
-      <div class="container text-center">
+      <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>ハードウェアデザイン</h2>
+            <h2 class="mb-5">ハードウェアデザイン</h2>
             <p class="lead mb-5">TBW</p>
           </div>
         </div>
@@ -239,7 +243,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>非言語コミュニケーション</h2>
+            <h2 class="mb-5">非言語コミュニケーション</h2>
             <p class="lead mb-3">
               家に帰ると飼い犬が尻尾を振って私のもとへやってくる。その仕草は私の帰りを心待ちにしていたかのようで、私は彼を抱き上げ「ただいま」と声をかける。
             </p>
@@ -292,10 +296,10 @@
 
     <!-- Hardware Design -->
     <section class="content-section bg-primary text-white" id="impression">
-      <div class="container text-center">
+      <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>印象調査</h2>
+            <h2 class="mb-5">印象調査</h2>
             <p class="lead mb-5">TBW</p>
           </div>
         </div>
@@ -306,8 +310,8 @@
     <section class="content-section bg-light" id="publication">
       <div class="container">
         <div class="row">
-          <div class="col-lg-10 mx-auto">
-            <h2>研究発表</h2>
+          <div class="col-lg-12 mx-auto">
+            <h2 class="mb-3">研究発表</h2>
             <ul>
               <li>奥岡耕平，大澤正彦，今井倫太, "コンテクスト推定に基づいて予測的認知を誘発する非自然言語エージェント", 情報処理学会第80回全国大会, 2018. (口頭)</li>
               <li>大藤 聖菜, 妹尾 卓磨, 清丸 寛一, 川崎 邦将, 大澤 正彦, 長田 茂美, 今井 倫太, "予測的認知と「間」の関係―言葉を話せないロボットによるしりとりを題材とした考察―", HAIシンポジウム, 2017. (口頭)</li>
@@ -315,7 +319,7 @@
               <li>川崎邦将, 大澤正彦, 今井倫太, 長田茂美, "認知的制約付き擬人化キャラクターに着目したコミュニケーションロボットの設計と開発", 人工知能学会 第6回 汎用人工知能研究会, 2017. (口頭)</li>
               <li>清丸寛一, 大澤正彦, 今井倫太, "予測的認知を用いた非自然言語による言語的コミュニケーション", 人工知能学会 第6回 汎用人工知能研究会, 2017. (口頭)</li>
             </ul>
-            <h2>取材</h2>
+            <h2 class="mb-3">取材</h2>
             <ul>
               <li>"【妄想してみた】かわいいロボットとの生活で実現したら嬉しい13のこと", AINOW, 2018.</li>
               <li>"リアル・ドラえもんを作りたい！", TBSラジオ THE FROGMAN SHOW A.I.共存ラジオ 好奇心家族, 2018.</li>
@@ -327,7 +331,7 @@
               <li>"制約があるからこそ、実現できる人間と「ミニドラ」の会話をHumanAgent Interaction (HAI)から学ぶ", AINOW, 2018.</li>
               <li>"ドラえもんの心を作るには"​, 日本経済新聞 朝刊, 2017.</li>
             </ul>
-            <h2>受賞</h2>
+            <h2 class="mb-3">受賞</h2>
             <ul>
               <li>2017年 KTM Microsoft Imagine Cup AWARD</li>
               <li>2017年 HAIシンポジウム 学生奨励賞</li>
@@ -348,7 +352,7 @@
           プロジェクトの趣旨に共感する一般の方まで多くのメンバーが共同して取り組んでいます。
         </p>
         <p class="lead mb-5">
-          プロジェクトへの参加およびご質問、ご意見、ご指摘、アイディアは下記のフォームよりお知らせください。
+          プロジェクトへの参加およびご質問、ご意見、ご指摘、アイディアなどは下記のフォームよりお知らせください。
         </p>
         <a class="btn btn-primary btn-xl" href="">コンタクトページに移動する</a>
       </div>
