--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container text-center my-auto">
         <h1 class="mb-1">ミニドラプロジェクト</h1>
         <h3 class="mb-5">WBA Future Leaders Research</h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">もっと見る</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">RADME MORE</a>
       </div>
       <div class="overlay"></div>
     </header>
@@ -67,29 +67,27 @@
       <div class="container">
         <div class="content-section-heading">
           <h2 class="mb-5">あらまし</h2>
-          <p class="lead mb-3">
-            私の前に小さなロボットがいる。
-            人の言葉を話せなければ、私の助けなしに段差を登り降りすることもできない。
-            持ち上げて移動させていると、人懐っこい声をあげ、小さな腕と頭を使って私に「降ろして！」と訴えてくる。
-            降ろしてあげると、私に何か言い残し、お気に入りのオモチャがあるところへ一目散に向かっていく。
-            今のは「ありがとう！」なのか「やったー！」なのか、何だったんだろうと考えながら、私はロボットの後を追いかける。
+          <p class="mb-3">
+            アニメ「ドラえもん」における、のび太とドラえもんの関係のように人とパートナーとして関わり合える知能は、どうすれば作り出せるのでしょうか。
           </p>
-          <p class="lead mb-3">
-            私たち全脳アーキテクチャ若手の会は、アニメ「ドラえもん」ののび太とドラえもんの関係のように、人と支え合えるロボットの実現を目指しています。
-            支え合えるほど親密な関係を築くには、お互いを理解し合うことが重要です。
-            人同士でそうした関係を築く上で重要なことは、行動や感情を理解することですが、
-            同じことをロボットで実現するにはどうすれば良いのでしょうか。
-            私たちは「ミニドラプロジェクト」によってこれに取り組んでいます。
+          <p class="mb-3">
+            私たち全脳アーキテクチャ若手の会では「ミニドラプロジェクト」と称して、
+            ドラえもんのように愛されるロボットを実現し、それを活用していろんな人に幸せになってもらえるよう取り組んでいます。
+            「ミニドラプロジェクト」では、私たちがパートナー候補として感じられるシンプルなロボット「ミニドラ」を開発しています。
+            ロボットをパートナーとして私たちが認めるためには、ロボットとの円滑なコミュニケーションが重要です。
+            「ミニドラ」は私たち人間と全く同じことはできません。
+            例えば、人間の使う言葉を話せなければ、体が小さく段差を登ることもできません。
+            そのため、「ミニドラ」は私たちの助けを普段から必要としています。
+          </p>
+          <p class="mb-3">
+            「ミニドラプロジェクト」では、「ミニドラ」と私たちの間にある身体的ギャップをどのようにしてコミュニケーションによって埋めるのか、
+            「ミニドラ」と人間の両方の立場からアプローチしています。
           </p>
           <p class="lead mb-5"><!-- Just for padding --></p>
           <div class="embed-responsive embed-responsive-16by9">
             <iframe src="https://www.youtube.com/embed/jepfyhL2t-w" allowfullscreen></iframe>
           </div>
         </div>
-      </div>
-      <div class="container text-center">
-        <h3 class="mb-5"><!-- Just for padding --></h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#hardware">ハードウェアの仕組み</a>
       </div>
     </section>
 
@@ -99,24 +97,6 @@
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0">これまでの取り組み</h3>
           <h2 class="mb-5">研究プロジェクト</h2>
-          <p class="lead mb-3">
-            「ミニドラ」には私たち人間のように「ミニドラ」の感じる世界があります。
-            大好きなどら焼きがあれば直ぐに駆け寄りたいし、嫌いなネズミがいれば直ぐさま逃げ出したいと思うでしょう。
-            成長して、もっともっと色んな行動を取り出すかも知れません。
-            だけど、「ミニドラ」は人の住む世界で好きに動くには体が小さすぎます。
-            段差があってどら焼きにたどり着けない事もあるでしょう。
-            段差を登り降りするには人間の助けが必要です。
-            「ミニドラ」は人間に助けて欲しいことを伝えないといけません。
-            もちろん人間の言葉は話せません、でも自由に動く頭や腕、足そして声は出すことができます。
-          </p>
-          <p class="lead mb-3">
-            この「ミニドラ」はどうすれば人間とコミュニケーションを取って助けてもらえるのでしょうか。
-            まず、「ミニドラ」は人間に何をして欲しいか、体を使って意図を伝える方法を考えないといけません。
-            そして、人間は「ミニドラ」が何をして欲しいのか汲み取ってあげないといけません。
-            私たちはこの「ミニドラプロジェクト」によって、
-            人間の手助けをしてもらうことを前提に設計されたロボットに対して人間がどのようにコミュニケーションを取れば良いのか、
-            「ミニドラ」の行動の立場と人間の認識の両方の視点から研究しています。
-          </p>
           <p class="lead mb-5"><!-- Just for padding --></p>
         </div>
         <div class="row no-gutters">
@@ -136,7 +116,7 @@
               <span class="caption">
                 <span class="caption-content">
                   <h2>非言語コミュニケーション</h2>
-                  <p class="mb-0">人は言葉を話せないロボットと会話できるのでしょうか？私たちは「人の未来を予測する力」と「ノンバーバル表現」にその成功の鍵があると考え、研究を進めています。</p>
+                  <p class="mb-0">人は言葉を話せないロボットと会話できるのでしょうか？私たちは「人の未来を予測する力」と「ノンバーバル表現」に成功の鍵があると考えています。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -147,7 +127,7 @@
               <span class="caption">
                 <span class="caption-content">
                   <h2>印象調査</h2>
-                  <p class="mb-0">TBW</p>
+                  <p class="mb-0">ロボットを実際に人に使ってもらい、どのような印象を受けるか調べています。</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -181,22 +161,22 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-6 mx-auto mb-5">
+          <div class="col-lg-7 mx-auto mb-5">
             <img src="img/hardware.jpg" class="img-responsive center-block"/>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <p class="lead mb-3">
+            <p class="mb-3">
               人扱いされる最もシンプルなロボットを設計する上で、重要なことは二つあると考えています。
             </p>
-            <p class="lead mb-3">
+            <p class="mb-3">
               一つ目は、つい助けたくなるデザインにすることです。
               例えば、大人のような見た目のロボットであれば、大人レベルの知性と能力が期待され、大人と接するように扱われます。
               私たちのロボットは、私たちの世界を自力で生きていくだけの能力は持ち合わせていません。
               したがって、能力が不十分なことが相手に伝わり、助けてもらえるようなロボットの見た目を研究しています。
             </p>
-            <p class="lead mb-3">
+            <p class="mb-3">
               二つ目は、言葉を使わずに情報を発信するために、多彩なノンバーバル表現を可能にすることです。
               これまで開発されてきたテーブルトップサイズのコミュニケーションロボットの多くは言葉によるコミュニケーションが基本で、
               頭や腕の動きなどのノンバーバル表現の利用は限定的でした。
@@ -214,49 +194,58 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2 class="mb-5">非言語コミュニケーション</h2>
-            <p class="lead mb-3">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-7 mx-auto mb-5">
+            <img src="img/nonverbal-communication.jpg" class="img-responsive center-block"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <p class="mb-3">
               家に帰ると飼い犬が尻尾を振って私のもとへやってくる。その仕草は私の帰りを心待ちにしていたかのようで、私は彼を抱き上げ「ただいま」と声をかける。
             </p>
-            <p class="lead mb-3">
+            <p class="mb-3">
               私たちは相手が言葉を扱えなくてもコミュニケーションを取ることができ、時に言葉で話しかけます。
               こうした言葉に依らないコミュニケーションを支える重要な要素として、
               私たちは「人の未来を予測する力」と「ノンバーバル表現」に着目し、研究を進めています。
             </p>
-            <p class="lead mb-3">
+            <p class="mb-3">
               「人の未来を予測する力」とは、状況に基づいてこれから受け取る情報を予期する力です。
               例えば、帰宅した時には「おかえり」と声をかけられることを私たちは知っています。
               冒頭のペットとの会話では、そうした事前知識に基づく予測によってペットの振る舞いを「おかえり」と解釈していると考えられます。
             </p>
-            <p class="lead mb-3">
+            <p class="mb-3">
               「ノンバーバル表現」とは、言葉を使わずに伝達できる情報であり、身振りや声色などが当てはまります。
               例えば、「何で遊びたい？」とペットに尋ね、ペットがボールのもとへ走っていけば、言葉のやりとりなしに意図を理解できます。
             </p>
-            <p class="lead mb-3">
+            <p class="mb-3">
               非言語コミュニケーションを実現する第一歩として、「しりとり」を題材に実験を行いました。
               しりとりには、「りんご」の次は「ゴリラ」といったお決まりのパターンが複数存在し、一般の会話と比べ、相手の応答を予測しやすい性質があります。
-              「人の未来を予測する力」に頼ったコミュニケーションを行う上で、これは都合の良い性質です。
+              「人の未来を予測する力」に頼ったコミュニケーションが可能か検証する上で、これは都合の良い性質です。
             </p>
-            <p class="lead mb-3">
+            <p class="mb-3">
               はじめに、ロボットの声だけを使った実験を行いました。
               実験協力者はロボットに言葉で話しかけ、ロボットはミニドラやピカチュウのように限られた音を駆使して返事をします。
               実験の結果、ロボットは言葉を正しく発音できないにも関わらず、半分以上の実験協力者が上手くしりとりを行えたと感じていたことが分かりました。
               今後、より詳細に検討する必要はありますが、
               「人の未来を予測する力」を活用すれば言葉を話せないロボットと言葉で会話できる可能性があることが分かりました。
             </p>
-            <p class="lead mb-3">
+            <p class="mb-3">
               実験のやりとりを分析したところ、二つのことに気が付きました。
               一つ目は、しりとりが成立したと感じた実験協力者は、
               しりとりの返事と「はい」や「いいえ」などの相槌を正しく区別できる傾向にあり、ターンテイキングが円滑であったことです。
               二つ目は、そうした実験協力者でさえ、しりとりの返事を必ずしも正しく理解できていなかったことです。
             </p>
-            <p class="lead mb-3">
+            <p class="mb-3">
               これらの気付きから、現在はノンバーバル表現の活用方法について研究しています。
               例えば、相槌の発話に首を振る動作が伴えば、それが相槌であることを簡単に理解でき、円滑なターンテイキングの実現に近付けると考えられます。
               また、何かを指差しながら発話すれば、その先にあるモノに関する内容を伝えようとしていることが分かり、誤った解釈を減らせる可能性があります。
             </p>
-            <p class="lead mb-3">
+            <p class="mb-3">
               これまでに実際に検討してきたノンバーバル表現の一つは「会話の間」です。
-              この研究では、「人の未来を予測する力」を引き出す、また引き出せたか確認する手段としての「会話の間」の有効性について調査し、
+              この研究では、「人の未来を予測する力」を引き出す、また引き出せたか確認する手段として「会話の間」が有効か調査し、
               HAIシンポジウム2017にて学生奨励賞を受賞しました。
             </p>
           </div>
@@ -270,7 +259,8 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2 class="mb-5">印象調査</h2>
-            <p class="lead mb-5">TBW</p>
+            <p class="mb-5">上妻さんの話</p>
+            <p class="mb-5">澤田さんの話</p>
           </div>
         </div>
       </div>
@@ -378,7 +368,7 @@
         <p class="lead mb-5">
           プロジェクトへの参加およびご質問、ご意見、ご指摘、アイディアなどは下記のフォームよりお知らせください。
         </p>
-        <a class="btn btn-primary btn-xl" href="">コンタクトページに移動する</a>
+        <a class="btn btn-primary btn-xl" href="">CONTACT US</a>
       </div>
     </section>
 
