--- a/index.html
+++ b/index.html
@@ -267,61 +267,21 @@
     </section>
 
     <!-- Hardware -->
-    <section class="content-section text-center" id="hardware">
+    <section class="content-section" id="hardware">
       <div class="container">
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0">ミニドラの仕組み</h3>
-          <h2 class="mb-5">ハードウェア</h2>
-        </div>
-        <div class="row">
-          <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-screen-smartphone"></i>
-            </span>
-            <h4>車輪</h4>
-            <p class="text-faded mb-0">TBW</p>
-          </div>
-          <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-pencil"></i>
-            </span>
-            <h4>サーボモータ</h4>
-            <p class="text-faded mb-0">TBW</p>
-          </div>
-          <div class="col-lg-2 col-md-6 mb-5 mb-md-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-like"></i>
-            </span>
-            <h4>音声出力</h4>
-            <p class="text-faded mb-0">TBW</p>
-          </div>
-          <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-mustache"></i>
-            </span>
-            <h4>カメラ</h4>
-            <p class="text-faded mb-0">TBW</p>
-          </div>
-          <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-mustache"></i>
-            </span>
-            <h4>マイク</h4>
-            <p class="text-faded mb-0">TBW</p>
-          </div>
-          <div class="col-lg-2 col-md-6 mb-5 mb-lg-0">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-mustache"></i>
-            </span>
-            <h4>姿勢センサ</h4>
-            <p class="text-faded mb-0">TBW</p>
-          </div>
+          <h2 class="mb-5">ハードウェア仕様</h2>
+          <p class="lead mb-5"><!-- Just for padding --></p>
+          <p class="mb-3">
+            ミニドラのレンダリングイメージに吹き出しで大きさ・重さなどの情報を書いた図を作る
+          </p>
         </div>
       </div>
     </section>
 
     <!-- Publications -->
-    <section class="content-section bg-light" id="publication">
+    <section class="content-section bg-primary text-white" id="publication">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
@@ -366,7 +326,7 @@
           プロジェクトの趣旨に共感する非専門家も多く参加しています。
         </p>
         <p class="lead mb-5">
-          プロジェクトへの参加およびご質問、ご意見、ご指摘、アイディアなどは下記のフォームよりお知らせください。
+          プロジェクトへの参加およびご質問、ご意見、ご指摘などは下記のフォームよりお知らせください。
         </p>
         <a class="btn btn-primary btn-xl" href="">CONTACT US</a>
       </div>
