--- a/index.html
+++ b/index.html
@@ -87,12 +87,16 @@
           <div class="embed-responsive embed-responsive-16by9">
             <iframe src="https://www.youtube.com/embed/jepfyhL2t-w" allowfullscreen></iframe>
           </div>
+          <p class="lead mb-5"><!-- Just for padding --></p>
+        </div>
+        <div class="text-center">
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">研究プロジェクト</a>
         </div>
       </div>
     </section>
 
     <!-- Projects -->
-    <section class="content-section my-auto" id="portfolio">
+    <section class="content-section my-auto bg-light" id="portfolio">
       <div class="container">
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0">これまでの取り組み</h3>
